Dev - added prepend

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,6 +25,7 @@
         onchange="prettyPrint()"></textarea>
       <textarea class="pick-box"></textarea>
       <div class="button-wrapper">
+        <input type="text" class="prepend" placeholder="Enter prepend.Default is '/hr/v1'">
         <button type="button" onclick="handleSubmit()">Convert</button>
       </div>
     </form>
